# blue-karaoke

./: .cursorrules  .env  .env.example  .gitignore  ELECTRON_README.md  ELECTRON_SETUP.md  IMPLEMENTACAO_COMPLETA.md  README.md  SETUP_COMPLETO.md  SYNC_README.md  TESTE_DRIVE.md  next.config.mjs  package.json  test-auth.js
.cursor/rules/: desktop-padroes.mdc
.github/workflows/: release-desktop.yml
app/: globals.css  layout.tsx  page.tsx
app/nota/: page.tsx
components/: sync-permission-dialog.tsx  sync-status.tsx
desktop/: .env  .gitignore  .npmrc  BD.ini  README_SYNC.md  RELEASE_GITHUB.md  SUPABASE_SETUP.md  SYNC_SETUP.md  drizzle.config.ts  electron-builder.config.js  env.txt  index.html  middleware.ts  next.config.mjs  package-lock.json  package.json  test-sync.js  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: db.rs  lib.rs  main.rs  supabase.rs
desktop/src-tauri/src/commands/: ativacao.rs  historico.rs  mod.rs  musicas.rs  player.rs  sync.rs  video.rs
docs/: CONFIGURACAO_COMPLETA.md  CONFIGURACAO_FINAL.md  DESKTOP_ADMIN_FLUXO.md  INICIAR_POSTGRES.md  INTEGRACAO_APIS.md  README.md  README_DATABASE.md  RESUMO_INTEGRACAO.md  RESUMO_SETUP.md  SETUP.md  desktop-electron-readme.md  desktop-electron-setup.md
drizzle/: 0000_nervous_mephistopheles.sql
electron/: main.js
scripts/: delete-all.ts
web/: SUPABASE_SETUP.md  drizzle.config.ts  env.local.txt  next.config.ts  package-lock.json  package.json  tsconfig.scripts.json
(+241 files in other folders)
